buildscript {
    repositories {
        mavenCentral()
    }

    dependencies {
        classpath "org.hsqldb:hsqldb:${gradle.hsqldbVersion}"
    }
}

plugins {
    id 'java'
    id 'war'
}
group 'com.qulix.yurkevichvv'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.8.2'
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}


tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
}


dependencies {
    implementation 'org.apache.wicket:wicket:8.14.0'
    implementation 'org.apache.wicket:wicket-core:8.14.0'
    implementation 'org.apache.wicket:wicket-util:8.14.0'
    compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
    implementation 'org.hsqldb:hsqldb:2.5.1'
    implementation 'org.codehaus.groovy:groovy-all:3.0.10'
    compileOnly('javax:javaee-web-api:8.0.1')
    implementation group: 'jstl', name: 'jstl', version: '1.2'

}

test {
    useJUnitPlatform()
}

apply from: 'databaseManipulationScripts.gradle'
